follow ide advices